--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -114,6 +114,14 @@ td {
   text-align: center;
 }
 
+.wide td, .wide th{
+  min-width: 140px;
+  max-width: 160px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  font-size: medium;
+}
+
 
 
 
