--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -16,12 +16,28 @@
 .App-header {
   background-color: #F2EBE5;
   min-height: 100vh;
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: darkgreen;
+}
+
+.box {
+  position: absolute;
+  top: 0px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  min-width: 100vw;
+  min-height: 100vh;
+
+  background-color: #F2EBE5
 }
 
 .App-link {
@@ -40,10 +56,33 @@
 
 
 
+.relative {
+  position: relative;
+  width: 100%;
+}
+
+.fixed {
+  position: fixed;
+  top: 0px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  z-index: 7;
+}
+
+
+
+
 
 
 h2 {
   margin-top: 60px;
+}
+
+.noTop {
+  margin-top: 0px;
 }
 
 
@@ -80,6 +119,17 @@ td {
   height: 50px;
   padding-left: 10px;
   padding-right: 10px;
+}
+
+
+
+
+.right {
+  text-align: right;
+}
+
+.left {
+  text-align: left;
 }
 
 
@@ -134,6 +184,10 @@ td {
   font-size: large;
   background-color: #F2EBE5;
   border-color: #F2EBE5;
+}
+
+.borderless {
+  border: 0px;
 }
 
 
