Enabled pressing enter to create new entries

--- a/src/styling/App.css
+++ b/src/styling/App.css
@@ -165,8 +165,9 @@ td {
 }
 
 .wide td, .wide th{
-  min-width: 140px;
-  max-width: 160px;
+  min-width: 180px;
+  max-width: 200px;
+  height: 70px;
   padding-top: 0px;
   padding-bottom: 0px;
   font-size: medium;
